# usbcamera

./: .gitignore  gradle.properties  ndk14.properties  ndk16.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/libs/: oss.aar
app/src/androidTest/java/com/et/usbcamera/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/et/usbcamera/: A.java  AvcEncoder.java  MainActivity.kt
app/src/main/java/com/et/usbcamera/oss/: OSSFileInfo.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/et/usbcamera/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
uvccamera/: build.gradle  proguard-rules.pro
uvccamera/src/androidTest/java/com/android/uvccamera/: ExampleInstrumentedTest.kt
uvccamera/src/main/: AndroidManifest.xml
uvccamera/src/main/cpp/: Avc.cpp  Avc.h  AvcArgs.cpp  AvcArgs.h  AvcEncoder.cpp  AvcEncoder.h  AvcEncoder.h.txt  AvcQueue.h  AvcQueue.txt  CMakeLists.txt  UVCButtonCallback.cpp  UVCCamera.cpp  UVCCamera.h  UVCPreview.cpp  UVCPreview.h  avc.cpp  avc.h  serenegiant_usb_UVCCamera.cpp
uvccamera/src/main/cpp/include/: localdefines.h  utilbase.h
uvccamera/src/main/cpp/include/rapidjson/: rapidjson.h
uvccamera/src/main/cpp/pipeline/: AbstractBufferedPipeline.h  CallbackPipeline.cpp  CallbackPipeline.h  CaptureBasePipeline.cpp  CaptureBasePipeline.h  ConvertPipeline.cpp  DistributePipeline.cpp  IPipeline.cpp  IPipeline.h  PreviewPipeline.cpp  PreviewPipeline.h  PublisherPipeline.cpp  SQLiteBufferedPipeline.cpp  SimpleBufferedPipeline.cpp  pipeline_helper.h
uvccamera/src/main/java/com/android/uvccamera/: BuildCheck.java  DeviceFilter.java  HandlerThreadHandler.java  IButtonCallback.java  IFrameCallback.java  IStatusCallback.java  NativeLib.kt  Size.java  USBMonitor.java  USBVendorId.java  UVCCamera.java
uvccamera/src/main/java/com/tencent/nanodetncnn/: MainActivity.java  NanoDetNcnn.java
uvccamera/src/main/jni/: Android.mk  Application.mk  localdefines.h
uvccamera/src/main/jni/libjpeg-turbo-1.5.0/: configure
uvccamera/src/test/java/com/android/uvccamera/: ExampleUnitTest.kt
(+5 files in other folders)
